fixed index of tech so adding new ones works without distorting stuff

--- a/app/assets/stylesheets/pages-index.scss
+++ b/app/assets/stylesheets/pages-index.scss
@@ -14,7 +14,7 @@
   width: 100%;
   background: white;
   .index-card-content {
-    height: 300px;
+    height: 250px;
     width: 240px;
     background-color: white;
     border: 1px solid black;
